# NyarchWizard

./: README.md  install.sh  meson.build  moe.nyarchlinux.wizard.json  wizard.flatpak
data/: meson.build  moe.nyarchlinux.wizard.appdata.xml.in  moe.nyarchlinux.wizard.desktop.in  moe.nyarchlinux.wizard.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: carousel_page.ui  main.py  meson.build  nyarchwizard.gresource.xml  nyarchwizard.in  pages.py  window.py  window.ui
